--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </article>
         <div class="flex-container">
-                    <article class="flex-item-left" style="background-image:url(https://monoassets.com/f/118499/1080x1280/f73f641e15/directpay.jpg)">
+                    <article class="flex-item-left grid2-3" style="background-image:url(https://monoassets.com/f/118499/1080x1280/f73f641e15/directpay.jpg)">
                         <figure style="width: 2.5rem; height: 2.5rem;">
                             <img src="https://monoassets.com/f/118499/x/4f8eb638fd/vector-1get-started-icon.svg" alt="" class="h-full">
                         </figure>
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </article>
-                            <article class="flex-item-right" style="background-image:url(https://monoassets.com/f/118499/1080x1280/f5a17c8f24/percept.png)">
+                            <article class="flex-item-right grid2-3" style="background-image:url(https://monoassets.com/f/118499/1080x1280/f5a17c8f24/percept.png)">
                                 <figure style="width: 2.5rem;height: 2.5rem;"><img src="https://monoassets.com/f/118499/x/e9eb8d1c26/union.svg" alt="" class="h-full"></figure>
                                 <h3 style="margin-top: 1.25rem;margin-top: 1.25rem;margin-bottom: 1.25rem;margin-bottom: 1.25rem;font-size: 2.8125rem; font-family: Duplicate Sans,DM Sans,sans-serif; color: white;">Percept</h3>
                                 <p style="max-width: 370px; line-height: 1.375!important; font-weight: lighter; color: white;font-size: 1.125rem; margin-bottom: 30px;">Money operations and reconciliation for all your corporate accounts, in one dashboard</p>
@@ -116,6 +116,78 @@
             </div>
 
             <!--Section four -->
+
+            <div class="section4-div">
+                <div>
+                    <h2 class="app-h2-text">Businesses building with Mono</h2>
+                    <p class="section4-subtitle">Here are some of the interesting features and experiences powered by Mono. </p>
+                </div>
+                <div class="section4-bigdiv">
+                    <ul class="listing-item">
+                        <li><div class="headerbutton" style=" --tw-bg-opacity: 1; background-color: rgba(32,32,32,var(--tw-bg-opacity)); border-radius: 50px;"><span style="color: white;">Lending</span></div></li>
+                        <li><div class="listingtext"><span>Financial Management</span></div></li>
+                        <li><div class="listingtext"><span>Account Veriication</span></div></li>
+                        <li><div class="listingtext"><span>Payments</span></div></li>
+                      </ul>
+                      <div class="flex-container">
+                        <div class="flex-item-left">
+                            <div>
+                                <h3 style="--tw-text-opacity: 1;font-size: 2.25rem;color: rgba(0,0,0,var(--tw-text-opacity)); margin-top: 3.25rem;margin-bottom: 1.25rem;line-height: 1.25!important;">Carbon's personalized loan offers</h3>
+                                <p style="--tw-text-opacity: 1;color: rgba(96,96,96,var(--tw-text-opacity)); white-space: pre-wrap; margin-top: 1.25rem; margin-bottom: 2.1875rem; line-height: 1.375!important;">Carbon wanted to make their risk assessment and borrower qualification better with high-quality data. 
+
+Using Mono's Statement Pages, Carbon can receive its users' bank statements in minutes. They get cash flow on the accounts for up to 12 months, all seamlessly without writing a single line of code.</p>
+                                <a style="--tw-text-opacity: 1;font-weight: 700;display: inline-flex;font-size: 1.125rem;line-height: 1.75rem;text-decoration: none;color: rgba(0,85,186,var(--tw-text-opacity)); align-content: center; justify-content: center; align-items: center;" href="/statement-pages">Read more about Statement Pages <i class="fa fa-arrow-right" style="padding-left: 4px; font-weight: lighter;"></i></a></div>
+                        </div>
+                        <div class="flex-item-right">
+                            <img src="./images/sec-carbon.png" alt="">
+                        </div>
+                      </div>
+                </div>
+            </div>
+
+
+
+
+            <!--Section Five -->
+            <div>
+                <div>
+                    <h2 class="app-h2-text">Why market leaders are choosing Mono</h2>
+                    <p class="section4-subtitle">Here's what some of them are saying.</p>
+                </div>
+                <div class="flex-container">
+                    <div class="flex-item-left">
+                        <div class="testimony">
+                            <svg viewBox="0 0 40 40" fill="none" class="apostroph"><path d="M20.2722 9H12.2458C11.477 9 10.7763 9.44069 10.4432 10.1336L1.37767 28.9954C0.739517 30.3231 1.70713 31.8617 3.18028 31.8617H7.29599C7.95436 31.8617 8.57056 31.5377 8.94372 30.9953L21.92 12.1336C22.8328 10.8066 21.8829 9 20.2722 9Z" fill="black"></path><path d="M36.1961 9H28.1696C27.4008 9 26.7001 9.44069 26.367 10.1336L17.3015 28.9954C16.6633 30.3231 17.631 31.8617 19.1041 31.8617H23.2198C23.8782 31.8617 24.4944 31.5377 24.8675 30.9953L37.8438 12.1336C38.7567 10.8066 37.8067 9 36.1961 9Z" fill="black"></path></svg>
+                            <h3 class="textimony-text">It's important to go with a data provider that inspires confidence in users to give consent to share their data; this is one of our favourite things about Mono. </h3>
+                            <div class="testimony-person">
+                                <div>
+                                    <img src="./images/image.webp" alt="" style="width: 3.125rem; height: 3.125rem">
+                                </div>
+                                <div style="margin-left: 1.25rem;">
+                                    <h6 class="testimony-person-name">Barima Effah-Adjei</h6>
+                                    <span class="testimony-person-position">Co-founder, Float</span>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="flex-item-right">
+                        <div class="testimony">
+                            <svg viewBox="0 0 40 40" fill="none" class="apostroph"><path d="M20.2722 9H12.2458C11.477 9 10.7763 9.44069 10.4432 10.1336L1.37767 28.9954C0.739517 30.3231 1.70713 31.8617 3.18028 31.8617H7.29599C7.95436 31.8617 8.57056 31.5377 8.94372 30.9953L21.92 12.1336C22.8328 10.8066 21.8829 9 20.2722 9Z" fill="black"></path><path d="M36.1961 9H28.1696C27.4008 9 26.7001 9.44069 26.367 10.1336L17.3015 28.9954C16.6633 30.3231 17.631 31.8617 19.1041 31.8617H23.2198C23.8782 31.8617 24.4944 31.5377 24.8675 30.9953L37.8438 12.1336C38.7567 10.8066 37.8067 9 36.1961 9Z" fill="black"></path></svg>
+                            <h3 class="textimony-text">The onboarding and integration process with Mono was smooth. Our Engineering and Product teams use the dashboard to oversee our statement collection process. </h3>
+                            <div class="testimony-person" >
+                                <div>
+                                    <img src="./images/testimony.webp" alt="" style="width: 3.125rem; height: 3.125rem">
+                                </div>
+                                <div style="margin-left: 1.25rem;">
+                                    <h6 class="testimony-person-name">Emmanuel Ogunsola</h6>
+                                    <span class="testimony-person-position">Product Manager, Aella</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+            </div>
     </div>
 </body>
 </html>
